--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="73.1.13" targetFramework="net472" />
+  <package id="cef.redist.x86" version="73.1.13" targetFramework="net472" />
+  <package id="CefSharp.Common" version="73.1.130" targetFramework="net472" />
+  <package id="CefSharp.OffScreen" version="73.1.130" targetFramework="net472" />
   <package id="NVorbis" version="0.8.6" targetFramework="net472" />
   <package id="NVorbis.OpenTKSupport" version="1.2.0" targetFramework="net472" />
   <package id="OpenTK" version="3.0.1" targetFramework="net471" />
+  <package id="SharpFont" version="4.0.1" targetFramework="net472" />
+  <package id="SharpFont.Dependencies" version="2.6" targetFramework="net472" />
   <package id="TgaLib" version="1.0.1" targetFramework="net472" />
 </packages>
