--- a/SharpQuake.Renderer.OpenGL/SharpQuake.Renderer.OpenGL.csproj
+++ b/SharpQuake.Renderer.OpenGL/SharpQuake.Renderer.OpenGL.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\SharpQuake.Framework\SharpQuake.Framework.csproj" />
