--- a/SharpQuake.Renderer/SharpQuake.Renderer.csproj
+++ b/SharpQuake.Renderer/SharpQuake.Renderer.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\SharpQuake.Framework\SharpQuake.Framework.csproj" />
